Fix navigation not working on small devices

--- a/themes/i-will-rename-this-later/assets/scss/nav.scss
+++ b/themes/i-will-rename-this-later/assets/scss/nav.scss
@@ -23,6 +23,7 @@
 
   img {
     height: 30px;
+    width: auto;
 
     @include media-breakpoint-up(lg) {
       height: auto;
